// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 lkfatf"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 rwdzH"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 fPSfrw"
  >
    <li
      class="profiles__Item-sc-bxtkkv-5 dpBQNO"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 dWGvjv"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 evFDcc"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 lkfatf"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 rwdzH"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 fPSfrw"
  >
    <li
      class="profiles__Item-sc-bxtkkv-5 dpBQNO"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 dWGvjv"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 evFDcc"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
